--- a/impressum.html
+++ b/impressum.html
@@ -2,29 +2,53 @@
 <html lang="de">
 
 <head>
+
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<title>Kontakt</title>
-	<link rel="stylesheet" type="text/css"
-	  href="src/css/styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Impressum</title>
+
+	<!-- FAVICONS -->
+	<link rel="apple-touch-icon" sizes="180x180"
+	  href="./src/img/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png"
+	  sizes="32x32" href="./src/img/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png"
+	  sizes="16x16" href="./src/img/favicons/favicon-16x16.png">
+	<link rel="manifest" href="./src/img/favicons/site.webmanifest">
+	<link rel="mask-icon" href="./src/img/favicons/safari-pinned-tab.svg"
+	  color="#5bbad5">
+	<link rel="shortcut icon" href="./src/img/favicons/favicon.ico">
+	<meta name="msapplication-TileColor"
+	  content="#f0f0f0">
+	<meta name="msapplication-config"
+	  content="./src/img/favicons/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- GOOGLE-FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Lato|Raleway"
 	  rel="stylesheet">
+
+	<!-- AUTOREN-STYLESHEET -->
+	<link rel="stylesheet" type="text/css"
+	  href="./src/css/styles.min.css">
+
 </head>
 
 <body>
 
-	<!-- Navigationsleiste -->
+	<!-- NAVIGATIONSLEISTE -->
 
 	<nav id="header-nav">
-		<!-- normale nav-leiste -->
+
+		<!-- DESKTOP-NAVIGATION -->
 
 		<div class="container" id="desktop-nav">
 			<div class="row">
 				<div class="col-6">
 
 					<a href="index.html" class="logo-link">
-						<img src="./src/img/webdesign-logo.png" alt="Logo von WEBDESIGN made simple">
-					</a>
+							<img src="./src/img/webdesign-logo.png" alt="Logo von WEBDESIGN made simple">
+						</a>
 
 					<ul>
 						<li><a href="index.html">Startseite</a></li>
@@ -37,15 +61,15 @@
 			</div>
 		</div>
 
-		<!-- mobile nav-dropdown -->
+		<!-- MOBILE-NAVIGATION -->
 
 		<div class="container" id="mobile-nav">
 			<div class="row">
 				<div class="col-6">
 
 					<a href="index.html" class="logo-link">
-						<img src="./src/img/webdesign-logo.png" alt="Logo von WEBDESIGN made simple">
-					</a>
+							<img src="./src/img/webdesign-logo.png" alt="Logo von WEBDESIGN made simple">
+						</a>
 
 					<div class="clearfix" id="mobile-nav-dropdown">
 
@@ -69,82 +93,94 @@
 		</div>
 
 	</nav>
-	<!-- === Header-banner === -->
+
+	<!-- HEADER-BANNER -->
 
 	<header id="header-banner-klein"></header>
 
-	<!-- === Impressum ===  -->
+	<!-- IMPRESSUM -->
 
-	<section>
+	<section id="impressum">
+
 		<div class="container">
 			<div class="row">
 				<div class="col-6">
+
 					<h1>Impressum</h1>
-					<p>Angaben gemäß § 5 TMG</p>
-					<p>Max Muster <br> Musterweg
-						<br> 12345 Musterstadt <br>
+
+					<h2>Angaben gem&auml;&szlig; &sect; 5 TMG:</h2>
+
+					<p>
+						Max Mustermann<br /> WEBDESIGN
+						made simple<br /> Musterstra&szlig;e
+						111<br /> Geb&auml;ude 44<br
+						/> 90210 Musterstadt
 					</p>
-					<p> <strong>Vertreten durch: </strong><br>						Max Muster<br>
+
+					<h2>Kontakt:</h2>
+
+					<p>
+						Telefon: +49 (0) 123 44 55 66<br
+						/> Telefax: +49 (0) 123 44
+						55 99<br /> E-Mail: mustermann@musterfirma.de
 					</p>
-					<p><strong>Kontakt:</strong>						<br> Telefon: 01234-789456<br>						Fax: 1234-56789
-						<br> E-Mail: <a href='mailto:max@muster.de'>max@muster.de</a></br>
-					</p>
-					<p><strong>Umsatzsteuer-ID: </strong>						<br> Umsatzsteuer-Identifikationsnummer
-						gemäß §27a Umsatzsteuergesetz:
-						Musterustid.
-						<br><br>
-						<strong>Wirtschafts-ID: </strong><br>						Musterwirtschaftsid
-						<br>
-					</p>
-					<p><strong>Aufsichtsbehörde:</strong><br>						Musteraufsicht Musterstadt<br></p>
-					<p><strong>Haftungsausschluss: </strong><br><br><strong>Haftung für Inhalte</strong><br><br>						Die Inhalte unserer Seiten
-						wurden mit größter Sorgfalt
-						erstellt. Für die Richtigkeit,
-						Vollständigkeit und Aktualität
-						der Inhalte können wir jedoch
-						keine Gewähr übernehmen.
-						Als Diensteanbieter sind
-						wir gemäß § 7 Abs.1 TMG für
+
+					<h2>Haftung f&uuml;r Inhalte</h2>
+
+					<p>
+						Als Diensteanbieter sind wir gem&auml;&szlig;
+						&sect; 7 Abs.1 TMG f&uuml;r
 						eigene Inhalte auf diesen
 						Seiten nach den allgemeinen
 						Gesetzen verantwortlich.
-						Nach §§ 8 bis 10 TMG sind
-						wir als Diensteanbieter jedoch
-						nicht verpflichtet, übermittelte
-						oder gespeicherte fremde
-						Informationen zu überwachen
-						oder nach Umständen zu forschen,
-						die auf eine rechtswidrige
-						Tätigkeit hinweisen. Verpflichtungen
-						zur Entfernung oder Sperrung
-						der Nutzung von Informationen
-						nach den allgemeinen Gesetzen
-						bleiben hiervon unberührt.
-						Eine diesbezügliche Haftung
+						Nach &sect;&sect; 8 bis 10
+						TMG sind wir als Diensteanbieter
+						jedoch nicht verpflichtet,
+						&uuml;bermittelte oder gespeicherte
+						fremde Informationen zu &uuml;berwachen
+						oder nach Umst&auml;nden
+						zu forschen, die auf eine
+						rechtswidrige T&auml;tigkeit
+						hinweisen.
+					</p>
+					<p>
+						Verpflichtungen zur Entfernung
+						oder Sperrung der Nutzung
+						von Informationen nach den
+						allgemeinen Gesetzen bleiben
+						hiervon unber&uuml;hrt. Eine
+						diesbez&uuml;gliche Haftung
 						ist jedoch erst ab dem Zeitpunkt
 						der Kenntnis einer konkreten
-						Rechtsverletzung möglich.
+						Rechtsverletzung m&ouml;glich.
 						Bei Bekanntwerden von entsprechenden
 						Rechtsverletzungen werden
 						wir diese Inhalte umgehend
 						entfernen.
-						<br><br><strong>Haftung für Links</strong><br><br>						Unser Angebot enthält Links
-						zu externen Webseiten Dritter,
+					</p>
+
+					<h2>Haftung f&uuml;r Links</h2>
+
+					<p>
+						Unser Angebot enth&auml;lt Links
+						zu externen Websites Dritter,
 						auf deren Inhalte wir keinen
-						Einfluss haben. Deshalb können
-						wir für diese fremden Inhalte
-						auch keine Gewähr übernehmen.
-						Für die Inhalte der verlinkten
+						Einfluss haben. Deshalb k&ouml;nnen
+						wir f&uuml;r diese fremden
+						Inhalte auch keine Gew&auml;hr
+						&uuml;bernehmen. F&uuml;r
+						die Inhalte der verlinkten
 						Seiten ist stets der jeweilige
 						Anbieter oder Betreiber der
 						Seiten verantwortlich. Die
 						verlinkten Seiten wurden
 						zum Zeitpunkt der Verlinkung
-						auf mögliche Rechtsverstöße
-						überprüft. Rechtswidrige
+						auf m&ouml;gliche Rechtsverst&ouml;&szlig;e
+						&uuml;berpr&uuml;ft. Rechtswidrige
 						Inhalte waren zum Zeitpunkt
 						der Verlinkung nicht erkennbar.
-						Eine permanente inhaltliche
+					</p>
+					<p>Eine permanente inhaltliche
 						Kontrolle der verlinkten
 						Seiten ist jedoch ohne konkrete
 						Anhaltspunkte einer Rechtsverletzung
@@ -152,21 +188,28 @@
 						von Rechtsverletzungen werden
 						wir derartige Links umgehend
 						entfernen.
-						<br><br><strong>Urheberrecht</strong><br><br>						Die durch die Seitenbetreiber
+					</p>
+
+					<h2>Urheberrecht</h2>
+
+					<p>Die durch die Seitenbetreiber
 						erstellten Inhalte und Werke
 						auf diesen Seiten unterliegen
 						dem deutschen Urheberrecht.
-						Die Vervielfältigung, Bearbeitung,
-						Verbreitung und jede Art
-						der Verwertung außerhalb
-						der Grenzen des Urheberrechtes
-						bedürfen der schriftlichen
-						Zustimmung des jeweiligen
-						Autors bzw. Erstellers. Downloads
-						und Kopien dieser Seite sind
-						nur für den privaten, nicht
-						kommerziellen Gebrauch gestattet.
-						Soweit die Inhalte auf dieser
+						Die Vervielf&auml;ltigung,
+						Bearbeitung, Verbreitung
+						und jede Art der Verwertung
+						au&szlig;erhalb der Grenzen
+						des Urheberrechtes bed&uuml;rfen
+						der schriftlichen Zustimmung
+						des jeweiligen Autors bzw.
+						Erstellers. Downloads und
+						Kopien dieser Seite sind
+						nur f&uuml;r den privaten,
+						nicht kommerziellen Gebrauch
+						gestattet.
+					</p>
+					<p>Soweit die Inhalte auf dieser
 						Seite nicht vom Betreiber
 						erstellt wurden, werden die
 						Urheberrechte Dritter beachtet.
@@ -180,173 +223,140 @@
 						von Rechtsverletzungen werden
 						wir derartige Inhalte umgehend
 						entfernen.
-						<br><br><strong>Datenschutz</strong><br><br>						Die Nutzung unserer Webseite
-						ist in der Regel ohne Angabe
-						personenbezogener Daten möglich.
+					</p>
+
+					<p>&nbsp;</p>
+
+					<h1>Datenschutzerkl&auml;rung</h1>
+
+					<h2>Datenschutz</h2>
+
+					<p>
+						Die Betreiber dieser Seiten nehmen
+						den Schutz Ihrer pers&ouml;nlichen
+						Daten sehr ernst. Wir behandeln
+						Ihre personenbezogenen Daten
+						vertraulich und entsprechend
+						der gesetzlichen Datenschutzvorschriften
+						sowie dieser Datenschutzerkl&auml;rung.
+					</p>
+					<p>
+						Die Nutzung unserer Website ist
+						in der Regel ohne Angabe
+						personenbezogener Daten m&ouml;glich.
 						Soweit auf unseren Seiten
 						personenbezogene Daten (beispielsweise
-						Name, Anschrift oder eMail-Adressen)
+						Name, Anschrift oder E-Mail-Adressen)
 						erhoben werden, erfolgt dies,
-						soweit möglich, stets auf
-						freiwilliger Basis. Diese
-						Daten werden ohne Ihre ausdrückliche
+						soweit m&ouml;glich, stets
+						auf freiwilliger Basis. Diese
+						Daten werden ohne Ihre ausdr&uuml;ckliche
 						Zustimmung nicht an Dritte
 						weitergegeben.
-						<br> Wir weisen darauf hin,
-						dass die Datenübertragung
-						im Internet (z.B. bei der
-						Kommunikation per E-Mail)
-						Sicherheitslücken aufweisen
-						kann. Ein lückenloser Schutz
-						der Daten vor dem Zugriff
-						durch Dritte ist nicht möglich.
-						<br> Der Nutzung von im Rahmen
-						der Impressumspflicht veröffentlichten
-						Kontaktdaten durch Dritte
-						zur Übersendung von nicht
-						ausdrücklich angeforderter
-						Werbung und Informationsmaterialien
-						wird hiermit ausdrücklich
-						widersprochen. Die Betreiber
-						der Seiten behalten sich
-						ausdrücklich rechtliche Schritte
-						im Falle der unverlangten
-						Zusendung von Werbeinformationen,
-						etwa durch Spam-Mails, vor.<br>
-						<br><br><strong>Google Analytics</strong><br><br>						Diese Website benutzt Google
-						Analytics, einen Webanalysedienst
-						der Google Inc. (''Google'').
-						Google Analytics verwendet
-						sog. ''Cookies'', Textdateien,
-						die auf Ihrem Computer gespeichert
-						werden und die eine Analyse
-						der Benutzung der Website
-						durch Sie ermöglicht. Die
-						durch den Cookie erzeugten
-						Informationen über Ihre Benutzung
-						dieser Website (einschließlich
-						Ihrer IP-Adresse) wird an
-						einen Server von Google in
-						den USA übertragen und dort
-						gespeichert. Google wird
-						diese Informationen benutzen,
-						um Ihre Nutzung der Website
-						auszuwerten, um Reports über
-						die Websiteaktivitäten für
-						die Websitebetreiber zusammenzustellen
-						und um weitere mit der Websitenutzung
-						und der Internetnutzung verbundene
-						Dienstleistungen zu erbringen.
-						Auch wird Google diese Informationen
-						gegebenenfalls an Dritte
-						übertragen, sofern dies gesetzlich
-						vorgeschrieben oder soweit
-						Dritte diese Daten im Auftrag
-						von Google verarbeiten. Google
-						wird in keinem Fall Ihre
-						IP-Adresse mit anderen Daten
-						der Google in Verbindung
-						bringen. Sie können die Installation
-						der Cookies durch eine entsprechende
-						Einstellung Ihrer Browser
-						Software verhindern; wir
-						weisen Sie jedoch darauf
-						hin, dass Sie in diesem Fall
-						gegebenenfalls nicht sämtliche
-						Funktionen dieser Website
-						voll umfänglich nutzen können.
-						Durch die Nutzung dieser
-						Website erklären Sie sich
-						mit der Bearbeitung der über
-						Sie erhobenen Daten durch
-						Google in der zuvor beschriebenen
-						Art und Weise und zu dem
-						zuvor benannten Zweck einverstanden.<br><br><strong>Google AdSense</strong><br><br>						Diese Website benutzt Google
-						Adsense, einen Webanzeigendienst
-						der Google Inc., USA (''Google'').
-						Google Adsense verwendet
-						sog. ''Cookies'' (Textdateien),
-						die auf Ihrem Computer gespeichert
-						werden und die eine Analyse
-						der Benutzung der Website
-						durch Sie ermöglicht. Google
-						Adsense verwendet auch sog.
-						''Web Beacons'' (kleine unsichtbare
-						Grafiken) zur Sammlung von
-						Informationen. Durch die
-						Verwendung des Web Beacons
-						können einfache Aktionen
-						wie der Besucherverkehr auf
-						der Webseite aufgezeichnet
-						und gesammelt werden. Die
-						durch den Cookie und/oder
-						Web Beacon erzeugten Informationen
-						über Ihre Benutzung dieser
-						Website (einschließlich Ihrer
-						IP-Adresse) werden an einen
-						Server von Google in den
-						USA übertragen und dort gespeichert.
-						Google wird diese Informationen
-						benutzen, um Ihre Nutzung
-						der Website im Hinblick auf
-						die Anzeigen auszuwerten,
-						um Reports über die Websiteaktivitäten
-						und Anzeigen für die Websitebetreiber
-						zusammenzustellen und um
-						weitere mit der Websitenutzung
-						und der Internetnutzung verbundene
-						Dienstleistungen zu erbringen.
-						Auch wird Google diese Informationen
-						gegebenenfalls an Dritte
-						übertragen, sofern dies gesetzlich
-						vorgeschrieben oder soweit
-						Dritte diese Daten im Auftrag
-						von Google verarbeiten. Google
-						wird in keinem Fall Ihre
-						IP-Adresse mit anderen Daten
-						der Google in Verbindung
-						bringen. Das Speichern von
-						Cookies auf Ihrer Festplatte
-						und die Anzeige von Web Beacons
-						können Sie verhindern, indem
-						Sie in Ihren Browser-Einstellungen
-						''keine Cookies akzeptieren''
-						wählen (Im MS Internet-Explorer
-						unter ''Extras > Internetoptionen
-						> Datenschutz > Einstellung'';
-						im Firefox unter ''Extras
-						> Einstellungen > Datenschutz
-						> Cookies''); wir weisen
-						Sie jedoch darauf hin, dass
-						Sie in diesem Fall gegebenenfalls
-						nicht sämtliche Funktionen
-						dieser Website voll umfänglich
-						nutzen können. Durch die
-						Nutzung dieser Website erklären
-						Sie sich mit der Bearbeitung
-						der über Sie erhobenen Daten
-						durch Google in der zuvor
-						beschriebenen Art und Weise
-						und zu dem zuvor benannten
-						Zweck einverstanden.</p><br>					Website Impressum erstellt
-					durch
-					<a href="http://www.impressum-generator.de">impressum-generator.de</a>					von der <a href="http://www.kanzlei-hasselbach.de/"
-					  rel="nofollow">Kanzlei Hasselbach</a>
+					</p>
+					<p>
+						Wir weisen darauf hin, dass die
+						Daten&uuml;bertragung im
+						Internet (z.B. bei der Kommunikation
+						per E-Mail) Sicherheitsl&uuml;cken
+						aufweisen kann. Ein l&uuml;ckenloser
+						Schutz der Daten vor dem
+						Zugriff durch Dritte ist
+						nicht m&ouml;glich.
+					</p>
+
+					<h2>Cookies</h2>
+
+					<p>
+						Die Internetseiten verwenden teilweise
+						so genannte Cookies. Cookies
+						richten auf Ihrem Rechner
+						keinen Schaden an und enthalten
+						keine Viren. Cookies dienen
+						dazu, unser Angebot nutzerfreundlicher,
+						effektiver und sicherer zu
+						machen. Cookies sind kleine
+						Textdateien, die auf Ihrem
+						Rechner abgelegt werden und
+						die Ihr Browser speichert.
+					</p>
+					<p>
+						Die meisten der von uns verwendeten
+						Cookies sind so genannte
+						„Session-Cookies“. Sie werden
+						nach Ende Ihres Besuchs automatisch
+						gel&ouml;scht. Andere Cookies
+						bleiben auf Ihrem Endger&auml;t
+						gespeichert, bis Sie diese
+						l&ouml;schen. Diese Cookies
+						erm&ouml;glichen es uns,
+						Ihren Browser beim n&auml;chsten
+						Besuch wiederzuerkennen.
+					</p>
+					<p>
+						Sie k&ouml;nnen Ihren Browser so
+						einstellen, dass Sie &uuml;ber
+						das Setzen von Cookies informiert
+						werden und Cookies nur im
+						Einzelfall erlauben, die
+						Annahme von Cookies f&uuml;r
+						bestimmte F&auml;lle oder
+						generell ausschlie&szlig;en
+						sowie das automatische L&ouml;schen
+						der Cookies beim Schlie&szlig;en
+						des Browser aktivieren. Bei
+						der Deaktivierung von Cookies
+						kann die Funktionalit&auml;t
+						dieser Website eingeschr&auml;nkt
+						sein.
+					</p>
+
+					<h2>Server-Log-Files</h2>
+
+					<p>
+						Der Provider der Seiten erhebt
+						und speichert automatisch
+						Informationen in so genannten
+						Server-Log Files, die Ihr
+						Browser automatisch an uns
+						&uuml;bermittelt. Dies sind:
+					</p>
+
+					<ul>
+						<li>Browsertyp und Browserversion</li>
+						<li>verwendetes Betriebssystem</li>
+						<li>Referrer URL</li>
+						<li>Hostname des zugreifenden
+							Rechners</li>
+						<li>Uhrzeit der Serveranfrage</li>
+					</ul>
+
+					<p>
+						Diese Daten sind nicht bestimmten
+						Personen zuordenbar. Eine
+						Zusammenf&uuml;hrung dieser
+						Daten mit anderen Datenquellen
+						wird nicht vorgenommen. Wir
+						behalten uns vor, diese Daten
+						nachtr&auml;glich zu ändern.
+					</p>
+
+					<p>Quelle: <a href="https://www.erecht24.de/impressum-generator.html">https://www.e-recht24.de/impressum-generator.html</a></p>
 
 				</div>
 			</div>
 		</div>
+
 	</section>
 
-
-	<!-- === Footer === -->
+	<!-- FOOTER-->
 
 	<footer id="footer">
 
 		<div class="container">
 			<div class="row">
 				<div class="col-6">
-					<span>WEBDESIGN-made-simple online Kurs</span>
+					<span>WEBDESIGN made simple by Ruben Winkler (2018)</span>
 					<nav id="footer-nav">
 						<a href="impressum.html">Impressum</a>
 					</nav>
